--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     </ul>
                 </div>
             </div> -->
-            <div class="work__item wide__item set-bg" data-setbg="img/work/html55.jpg">
+            <div class="work__item wide__item set-bg" data-setbg="img/work/html55.JPG">
                 <a href="" class=""><i
                         class=""></i></a>
                 <div class="work__item__hover">
