--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
     <!-- Team Section End -->
 
     <!-- Latest Blog Section Begin -->
-    <section class="latest spad">
+<!--     <section class="latest spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -481,8 +481,8 @@
                         <h2>Tech updates</h2>
                     </div>
                 </div>
-            </div>
-            <div class="row">
+            </div> -->
+<!--             <div class="row">
                 <div class="latest__slider owl-carousel">
                     <div class="col-lg-4">
                         <div class="blog__item latest__item">
@@ -495,7 +495,31 @@
                                 cool features we were able...</p>
                             <a href="#">Read more <span class="arrow_right"></span></a>
                         </div>
-                    </div>
+                    </div> -->
+<!--                     <div class="col-lg-4">
+                        <div class="blog__item latest__item">
+                            <h4>Bumper Ads: How to Tell a Story in 6 Seconds</h4>
+                            <ul>
+                                <li>Jan 03, 2020</li>
+                                <li>05 Comment</li>
+                            </ul>
+                            <p>We recently launched a new website for a Vital client and wanted to share some of the
+                                cool features we were able...</p>
+                            <a href="#">Read more <span class="arrow_right"></span></a>
+                        </div>
+                    </div> -->
+<!--                     <div class="col-lg-4">
+                        <div class="blog__item latest__item">
+                            <h4>What Makes Users Want to Share a Video on Social Media?</h4>
+                            <ul>
+                                <li>Jan 03, 2020</li>
+                                <li>05 Comment</li>
+                            </ul>
+                            <p>We recently launched a new website for a Vital client and wanted to share some of the
+                                cool features we were able...</p>
+                            <a href="#">Read more <span class="arrow_right"></span></a>
+                        </div> -->
+<!--                     </div>
                     <div class="col-lg-4">
                         <div class="blog__item latest__item">
                             <h4>Bumper Ads: How to Tell a Story in 6 Seconds</h4>
@@ -507,8 +531,8 @@
                                 cool features we were able...</p>
                             <a href="#">Read more <span class="arrow_right"></span></a>
                         </div>
-                    </div>
-                    <div class="col-lg-4">
+                    </div> -->
+<!--                     <div class="col-lg-4">
                         <div class="blog__item latest__item">
                             <h4>What Makes Users Want to Share a Video on Social Media?</h4>
                             <ul>
@@ -519,20 +543,8 @@
                                 cool features we were able...</p>
                             <a href="#">Read more <span class="arrow_right"></span></a>
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="blog__item latest__item">
-                            <h4>Bumper Ads: How to Tell a Story in 6 Seconds</h4>
-                            <ul>
-                                <li>Jan 03, 2020</li>
-                                <li>05 Comment</li>
-                            </ul>
-                            <p>We recently launched a new website for a Vital client and wanted to share some of the
-                                cool features we were able...</p>
-                            <a href="#">Read more <span class="arrow_right"></span></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
+                    </div> -->
+<!--                     <div class="col-lg-4">
                         <div class="blog__item latest__item">
                             <h4>What Makes Users Want to Share a Video on Social Media?</h4>
                             <ul>
@@ -543,8 +555,8 @@
                                 cool features we were able...</p>
                             <a href="#">Read more <span class="arrow_right"></span></a>
                         </div>
-                    </div>
-                    <div class="col-lg-4">
+                    </div> -->
+<!--                     <div class="col-lg-4">
                         <div class="blog__item latest__item">
                             <h4>What Makes Users Want to Share a Video on Social Media?</h4>
                             <ul>
@@ -555,19 +567,7 @@
                                 cool features we were able...</p>
                             <a href="#">Read more <span class="arrow_right"></span></a>
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="blog__item latest__item">
-                            <h4>What Makes Users Want to Share a Video on Social Media?</h4>
-                            <ul>
-                                <li>Jan 03, 2020</li>
-                                <li>05 Comment</li>
-                            </ul>
-                            <p>We recently launched a new website for a Vital client and wanted to share some of the
-                                cool features we were able...</p>
-                            <a href="#">Read more <span class="arrow_right"></span></a>
-                        </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -575,7 +575,7 @@
     <!-- Latest Blog Section End -->
 
     <!-- Call To Action Section Begin -->
-    <section class="callto spad set-bg" data-setbg="img/callto-bg.jpg">
+<!--     <section class="callto spad set-bg" data-setbg="img/callto-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
@@ -587,7 +587,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Call To Action Section End -->
 
     <!-- Footer Section Begin -->
