--- a/resume/resume.html
+++ b/resume/resume.html
@@ -384,7 +384,7 @@
     <section id="facts" class="facts">
       <div class="container">
 
-        <div class = "git">
+        <!-- <div class = "git">
         <div class="section-title">
           <h2>Github</h2>
           <p>This is all my hard works done while in personal project and in an organization.</p>
@@ -424,7 +424,7 @@
             </div>
           </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End Facts Section -->
