--- a/ML/ML.html
+++ b/ML/ML.html
@@ -107,7 +107,7 @@
                 <div class="row">
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <a href="./resnet.html">
+                      <a href="./imageclassification.html">
                       <img src="assets/images/popular-01.jpg" alt="">
                       
                       <h4>Image classification<br><span>lets see what your image contains</span></h4>
