chatbot queries added

--- a/ML/chatbot.html
+++ b/ML/chatbot.html
@@ -221,29 +221,30 @@ inputField.addEventListener("keydown", (e) => {
   }
 });
 const utterances = [ 
-  ["how are you", "how is life", "how are things"],        //0
-  ["hi", "hey", "hello", "good morning", "good afternoon"],      //1
-  ["what are you doing", "what is going on", "what is up"],      //2
-  ["how old are you"],					//3
-  ["who are you", "are you human", "are you bot", "are you human or bot"],   //4 
-    ["who created you", "who made you"],				//5
-    ["your name please", "your name", "may i know your name", "what is your name"],  //6
-    ["i love you"],						//7
-    ["happy", "good", "fun", "wonderful", "fantastic", "cool"],	//8
-    ["bad", "bored", "tired"],					//9
-    ["help me", "tell me story", "tell me joke"],			//10
-    ["ah", "yes", "ok", "okay", "nice"],				//11
-    ["thanks", "thank you"],					//12
-    ["bye", "good bye", "goodbye", "see you later"],		//13
-    ["what should i eat today", "what should i eat"],					//14
-    ["bro"],							//15
-    ["what", "why", "how", "where", "when"],			//16
-    ["no","not sure","maybe","no thanks"],		//17
-    ['tech stack', "coding", "what is your stack", "what does rahul do?","which tech stack does rahul use?"],//18
-    ["where do you work",'what do you do for living','what is your work?',"work", "job"] ,//19
-    ['are you available for job', 'are your free?', 'are you open to work?'], //20
-    ['your contact', "contact", "how can i contact you", 'your details'], //21
-    ['where do you live?', "where are you located", "location"],
+["how are you", "how is life", "how are things", "How are you","How is life", "How are things"],        //0
+  ["hi", "hey", "hello", "good morning", "good afternoon", "Hi","Hey", "Hello", "Good morning", "Good Afternoon"],      //1
+  ["what are you doing", "what is going on", "what is up", "What are you doing", "What is going on", "What is up"],      //2
+  ["how old are you", "How old are you","What is your age", "what is your age"],					//3
+  ["who are you", "are you human", "are you bot", "are you human or bot","Who are you?", "Are you human", "Are you human or bot"],   //4 
+    ["who created you", "who made you", "Who created you", "Who made you", "who is your creator", "Who is your creator"],				//5
+    ["your name please", "your name", "may i know your name", "what is your name","Your name please", "Your name", "May i know your name", "what is your name"],  //6
+    ["i love you", "I love you", "I love rahul", "Marry me"],						//7
+    ["happy", "good", "fun", "wonderful", "fantastic", "cool","Happy", "Good", "Fun", "Wonderful", "Fantastic"],	//8
+    ["bad", "bored", "tired", "Bad", "Bored", "Tired"],					//9
+    ["help me", "tell me story", "tell me joke", "Help me", "Tell me joke", "Joke", "joke", "Tell me a story"],			//10
+    ["ah", "yes", "ok", "okay", "nice", "Ah", "Yes", "Ok", "Okay", "Nice"],				//11
+    ["thanks", "thank you", "Thanks", "Thank you", "thank your for help"],					//12
+    ["bye", "good bye", "goodbye", "see you later","Bye", "Good bye", "Goodbye", "Goodnight", "See you later"],		//13
+    ["what should i eat today", "what should i eat", "What should i eat", "What should i eat today"],					//14
+    ["bro", "Bro", "Rahul", "Whats up", "rahul"],							//15
+    ["what", "why", "how", "where", "when", "What", "Why", "How", "Where", "When"],			//16
+    ["no","not sure","maybe","no thanks", "No", "Not sure", "Maybe", "No thanks"],		//17
+    ['tech stack', "Tech stack","your tech stack", "coding","Coding", "what is your stack","What is your tech stack", "what does rahul do","What does rahul do","which tech stack does rahul use?", "Which tech stack does rahul use", "Which language do you use", "which language do you use", "What language do you use", "what language do you use"],//18
+    ["where do you work","Where do you work", "Where do you work ?",'what do you do for living',"What do you do for living",'what is your work', "What is your work","work", "Work", "job", "Job"] ,//19
+    ['are you available for job', "Are you available for job", 'are your free', 'are you open to work', "do you need job", "do you want job", "Are you free to work", "are you free to work"], //20
+    ['your contact', "Your contact", "contact", "Contact", "how can i contact you","How can i contact you", 'your details', "Your details", "tell me about you", "Tell me about you", "Send me your details", "send me your details"], //21
+    ['where do you live?', "where are you located", "location", "Where does rahul live", "Where do you live", "Where are you from", "where are your from", "Location", "Send me location"], // 22
+    ['Your resume', "Send me your resume", "your resume", "send me your resume", "Resume", "resume"] //23
 ];
  
 // Possible responses corresponding to triggers
