--- a/ML/ML.html
+++ b/ML/ML.html
@@ -121,7 +121,7 @@
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <a href="./videos.html">
+                      <a href="./videos/yolo.html">
                       <img src="assets/images/popular-02.jpg" alt="">
                       <h4>Video<br><span>video classification</span></h4>
                       <ul>
