--- a/ML/imageclassification.html
+++ b/ML/imageclassification.html
@@ -60,15 +60,15 @@
                     <!-- ***** Search End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <!-- <ul class="nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="browse.html">Browse</a></li>
-                        <li><a href="details.html" class="active">Details</a></li>
-                        <li><a href="streams.html">Streams</a></li>
-                        <li><a href="profile.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
-                    </ul>   
+                        <li><a href="ML.html">Home</a></li>
+                        <li><a href="">Browse</a></li>
+                        <li><a href="ML.html" class="active">ML projects</a></li>
+                        <li><a href="streams.html">Streams</a></li> -->
+                        <!-- <li><a href="profile.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li> -->
+                    <!-- </ul>    -->
                     <a class='menu-trigger'>
                         <span>Menu</span>
-                    </a> -->
+                    </a>
                     <!-- ***** Menu End ***** -->
                 </nav>
             </div>
@@ -80,22 +80,18 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
 <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 
-
-Script to run image classification using ml5.js
-
-
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
         <div class="page-content">
           <h1> Image Classification</h1>
-          <h2>With ml5</h2>
+          <h2>Check what your image contains</h2>
           <div id="result">Upload a file and and press submit, wait until it is Scanning ...</div>
           <style>
             #result {
               font-size: 32px;
               font-weight: bold;
-              color: rgb(56, 242, 242);
+              color: rgb(250, 175, 132);
             }
           </style>
           <input type="file" id="actual-btn" hidden/>
