--- a/ML/ML.html
+++ b/ML/ML.html
@@ -145,16 +145,18 @@
                     </a>
                   </div>
 
-                  <!-- <div class="col-lg-3 col-sm-6">
+                  <div class="col-lg-3 col-sm-6">
+                    <a href="./speechtotext.html">
                     <div class="item">
                       <img src="assets/images/popular-04.jpg" alt="">
-                      <h4>CS-GO<br><span>Legendary</span></h4>
+                      <h4>Speech recognition<br><span>talk to see what you speak</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <!-- <li><i class="fa fa-star"></i> 4.8</li>
+                        <li><i class="fa fa-download"></i> 2.3M</li> -->
                       </ul>
                     </div>
-                  </div> -->
+                    </a>
+                  </div>
                   <!-- <div class="col-lg-6">
                     <div class="item">
                       <div class="row">
