--- a/ML/ML.html
+++ b/ML/ML.html
@@ -107,7 +107,7 @@
                 <div class="row">
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <a href="./imageclassification.html">
+                      <a href="./Imageclassification/imageclassification.html">
                       <img src="assets/images/popular-01.jpg" alt="">
                       
                       <h4>Image classification<br><span>lets see what your image contains</span></h4>
@@ -133,7 +133,7 @@
                   </div>
 
                   <div class="col-lg-3 col-sm-6">
-                    <a href="./chatbot.html">
+                    <a href="./chatbot/chatbot.html">
                     <div class="item">
                       <img src="assets/images/popular-03.jpg" alt="">
                       <h4>ChatBot<br><span>Talk to a bot built by me</span></h4>
@@ -146,10 +146,22 @@
                   </div>
 
                   <div class="col-lg-3 col-sm-6">
-                    <a href="./speechtotext.html">
+                    <a href="./speechtotext/speechtotext.html">
                     <div class="item">
                       <img src="assets/images/popular-04.jpg" alt="">
                       <h4>Speech recognition<br><span>talk to see what you speak</span></h4>
+                      <ul>
+                        <!-- <li><i class="fa fa-star"></i> 4.8</li>
+                        <li><i class="fa fa-download"></i> 2.3M</li> -->
+                      </ul>
+                    </div>
+                    </a>
+                  </div>
+                  <div class="col-lg-3 col-sm-6">
+                    <a href = "./voicecontrolgame.html">
+                    <div class="item">
+                      <img src="assets/images/popular-04.jpg" alt="">
+                      <h4>Voice control dot<br><span>Play around with the voice controlled dot</span></h4>
                       <ul>
                         <!-- <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 2.3M</li> -->
