--- a/ML/chatbot/chatbot.html
+++ b/ML/chatbot/chatbot.html
@@ -97,9 +97,10 @@
     <div id="container" class="container">
         <div class="headers">
 
-            <h1>welcome to drox'es website</h1>
+            <h1>welcome to rahul's website</h1>
+            <p>lets start talking</p>
            </div>
-        <img src="./assets/images/200e8d139737079.6234b0487404d.gif" height="400vh" alt="Chatbot clipart">
+        <img src="./assets/images/200e8d139737079.6234b0487404d.gif" height="300vh" alt="Chatbot clipart">
          <div id="chat" class="chat">
           <div id="messages" class="messages">
           </div>
