refined chatbot code

--- a/ML/chatbot/chatbot.html
+++ b/ML/chatbot/chatbot.html
@@ -13,10 +13,10 @@
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.css">
     <!-- <link rel="stylesheet" href="assets/css/templatemo-cyborg-gaming.css"> -->
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="../assets/css/owl.css">
+    <link rel="stylesheet" href="../assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 </head>
 
@@ -37,7 +37,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="ML.html" class="logo">
+                        <a href="../ML.html" class="logo">
                           <h1>Home</h1>  
                           <!-- <img src="../img/logo/R2.png" width="30px" height="30px" > -->
                         </a>
@@ -100,7 +100,7 @@
             <h1>welcome to rahul's website</h1>
             <p>lets start talking</p>
            </div>
-        <img src="./assets/images/200e8d139737079.6234b0487404d.gif" height="300vh" alt="Chatbot clipart">
+        <img src="../assets/images/200e8d139737079.6234b0487404d.gif" height="300vh" alt="Chatbot clipart">
          <div id="chat" class="chat">
           <div id="messages" class="messages">
           </div>
@@ -375,11 +375,11 @@ function addChatEntry(input, product) {
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-  <script src="assets/js/isotope.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/tabs.js"></script>
-  <script src="assets/js/popup.js"></script>
-  <script src="assets/js/custom.js"></script>
+  <script src="../assets/js/isotope.min.js"></script>
+  <script src="../assets/js/owl-carousel.js"></script>
+  <script src="../assets/js/tabs.js"></script>
+  <script src="../assets/js/popup.js"></script>
+  <script src="../assets/js/custom.js"></script>
        <footer>
         <div class="container">
           <div class="row">
