--- a/ML/voicecontrol/voicecontroldot.html
+++ b/ML/voicecontrol/voicecontroldot.html
@@ -18,6 +18,10 @@
    </div>  
   </div>  
   <style>
+    *{
+        background-color: black;
+        color: aliceblue;
+    }
      .main {  
   width: 100%;  
   display: flex;  
