--- a/ML/ML.html
+++ b/ML/ML.html
@@ -279,7 +279,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © <a href="#">Rahul Parajuli</a> All rights reserved. 
+          <p>Copyright © <a href="#">Rahul Parajuli</a> All rights reserved. </p>
           
           <!-- <br>Design: <a href="" target="_blank" title=""></a></p> -->
         </div>
