voice command dot

--- a/ML/ML.html
+++ b/ML/ML.html
@@ -158,7 +158,7 @@
                     </a>
                   </div>
                   <div class="col-lg-3 col-sm-6">
-                    <a href = "./voicecontrolgame.html">
+                    <a href = "./voicecontrol/voicecontrolgame.html">
                     <div class="item">
                       <img src="assets/images/popular-04.jpg" alt="">
                       <h4>Voice control dot<br><span>Play around with the voice controlled dot</span></h4>
