--- a/ML/chatbot/chatbot.html
+++ b/ML/chatbot/chatbot.html
@@ -14,7 +14,7 @@
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="../assets/css/fontawesome.css">
-    <!-- <link rel="stylesheet" href="assets/css/templatemo-cyborg-gaming.css"> -->
+    <!-- <link rel="stylesheet" href="../assets/css/templatemo-cyborg-gaming.css"> -->
     <link rel="stylesheet" href="../assets/css/owl.css">
     <link rel="stylesheet" href="../assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
@@ -98,9 +98,9 @@
         <div class="headers">
 
             <h1>welcome to rahul's website</h1>
-            <p>lets start talking</p>
+            <h3>lets start talking</h3>
            </div>
-        <img src="../assets/images/200e8d139737079.6234b0487404d.gif" height="300vh" alt="Chatbot clipart">
+        <img src="../assets/images/200e8d139737079.6234b0487404d.gif" height="200vh", width="400vh" alt="Chatbot clipart">
          <div id="chat" class="chat">
           <div id="messages" class="messages">
           </div>
