--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
           <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
           <li><a href="ML/ML.html" class="nav-link scrollto"><i class="bx bx-server"></i><span>MY PROJECTS</span></a></li>
-        <li><a href="pastweb/index.html" class="nav-link scrollto"><i class="bx bx-home"></i> <span>MY WEBSITE</span></a></li>
+          <li><a href="pastweb/index.html" class="nav-link scrollto"><i class="bx bx-home"></i> <span>MY WEBSITE</span></a></li>
+          <li><a href="lucy/lucy.html" class="nav-link scrollto"><i class="bx bx-heart"></i> <span>My pet</span></a></li>
         </ul>
 
       </nav><!-- .nav-menu -->
