--- a/lucy/lucy.html
+++ b/lucy/lucy.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+    <h1 class = "heading">
+        Hi my name is lucy!
+    </h1>
+
     <svg class="bg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 960 720" preserveAspectRatio="none">
         <style>
           .st1 {
@@ -565,6 +569,12 @@ document.addEventListener("DOMContentLoaded", justExisting);
 
 <style>
 
+.heading {
+    z-index: 100;
+    position: absolute;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: auto;
+}
 
 :root {
   --buttons: #d65f5f;
