--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <div class="col-lg-6">
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bsc. Hons (Information Technology)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rahul.parajuli27@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
@@ -224,13 +224,13 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelors in Computer Science</h4>
-              <h5>January, 2019 - January, 2022</h5>
+              <h5>January, 2019 - June, 2022</h5>
               <p><em>Herald College, Naxal, Kathmandu, Nepal</em></p>
             <p>First Class Honors</p>
             </div>
             <div class="resume-item">
               <h4></h4>
-              <h5>may, 2014 - may, 2016</h5>
+              <h5>May, 2014 - May, 2016</h5>
               <p><em>DAV college, Jawalakhel, Lalitpur, Nepal</em></p>
             <p>Study of science</p>
             </div>
@@ -239,7 +239,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Associate Machine Learning Engineer</h4>
-              <h5>April, 2022 - Present</h5>
+              <h5>March, 2022 - Present</h5>
               <p><em>Eydean Inc, Lazimpat, Kathmandu, Nepal</em></p>
               <ul>
                 <li>Took lead in the design, development, and implementation of the machine learning Algorithms, layout, and production communication materials</li>
