--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="resume/techstack.html" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Tech Stack</span></a></li>
           <li><a href="ML/ML.html" class="nav-link scrollto"><i class="bx bx-server"></i><span>MY PROJECTS</span></a></li>
           <li><a href="pastweb/index.html" class="nav-link scrollto"><i class="bx bx-home"></i> <span>MY WEBSITE</span></a></li>
           <li><a href="lucy/lucy.html" class="nav-link scrollto"><i class="bx bx-heart"></i> <span>My pet</span></a></li>
@@ -186,6 +187,8 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rahul.parajuli27@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
+                <a href = "mailto:rahul.parajuli27@gmail.com"><button class="resdown" role="button">Email me</button></a>
+                <button class="resdown" role="button" onclick="resumes()">Download resume</button>
               </div>
             </div>
             <p>
@@ -250,7 +253,7 @@
             </div>
             <div class="resume-item">
               <h4>Community Leader &amp; Python Developer</h4>
-              <h5>June, 2019 - january, 2022</h5>
+              <h5>June, 2019 - January, 2022</h5>
               <p><em>Devcorp Ailearners Community</em></p>
               <ul>
                 <li>Curated numerous amount of events including the prospect of artificial intelligence</li>
