--- a/resume/portfolio-details.html
+++ b/resume/portfolio-details.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/g2.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -80,10 +80,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Portfoio Details - BOOKGARA</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li>Portfoio Details - BOOKGARA</li>
           </ol>
         </div>
 
@@ -101,15 +101,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bookgara.png" alt="">
+                  <img src="assets/img/portfolio/bookgara.png"alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <!-- <img src="assets/img/portfolio/portfolio-details-2.jpg" alt=""> -->
+                  <img src="assets/img/portfolio/bookgara2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <!-- <img src="assets/img/portfolio/portfolio-details-3.jpg" alt=""> -->
+                  <img src="assets/img/portfolio/bookgara3.png" alt="">
                 </div>
 
               </div>
@@ -130,7 +130,7 @@
             <div class="portfolio-description">
               <h2>Bookgara - A community based platform</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              BookGara is an online-based community platform which connects people offering all kinds of services with their potential clients to solve a problem. We interact between two players, the service provider and the prospective client, by creating interconnected network.
               </p>
             </div>
           </div>
