foodbusters and bookgara

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
               <img src="resume/assets/img/portfolio/bookgara.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="resume/assets/img/portfolio/bookgara.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="resume/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="resume/bookgara.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -304,8 +304,8 @@
             <div class="portfolio-wrap">
               <img src="resume/assets/img/portfolio/foodbuster.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="resume/assets/img/portfolio/foodbuster.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="resume/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="resume/assets/img/portfolio/foodbuster.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="resume/foodbusters.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -315,7 +315,7 @@
               <img src="resume/assets/img/portfolio/ramailogames.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="resume/assets/img/portfolio/ramailogames.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="resume/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="resume/ramailogames.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
