--- a/resume/stack.html
+++ b/resume/stack.html
@@ -9,7 +9,6 @@
 <body>
     
 
-
     <body class='bg-dark'>
         <div id='shelf'>
           <div class='book-bg graphic'>
@@ -167,9 +166,6 @@
           </div>
         </div>
       </body>
-
-
-</body>
 
 <style>
 
@@ -457,18 +453,19 @@ h3 {
 
 </style>
 
-
 <script>
-    $(".book-bg").click(function () {
-  $(this).addClass("active");
+
+(".book-bg").click(function () {
+  (this).addClass("active");
 });
 
-$("#back svg").click(function () {
+("#back svg").click(function () {
   event.stopPropagation();
-  $(".book-bg").removeClass("active");
+  (".book-bg").removeClass("active");
 });
+
 
 </script>
 
-
+</body>
 </html>
