--- a/index.html
+++ b/index.html
@@ -523,8 +523,19 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Associate Machine Learning Engineer</h4>
-              <h5>March, 2022 - Present</h5>
+              <h4>Backend AI Engineer</h4>
+              <h5>February, 2023 - Present</h5>
+              <p><em>Tekkon Technologies Nepal, Kathmandu, Nepal</em></p>
+              <ul>
+                <li>Worked in technologies on Open CV, Cuda and Gstreamer.</li>
+                <li>Worked closely with international clients to build AI powered model.</li>
+                <li>Hybrid working culture has certainly made impact in my life to work remotely and have a great team to work with.</li>
+                <!-- <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Machine Learning Engineer / Backend Developer</h4>
+              <h5>August, 2021 - January, 2023</h5>
               <p><em>Eydean Inc, Lazimpat, Kathmandu, Nepal</em></p>
               <ul>
                 <li>Took lead in the design, development, and implementation of the machine learning Algorithms, layout, and production communication materials</li>
