--- a/index.html
+++ b/index.html
@@ -527,8 +527,9 @@
               <h5>February, 2023 - Present</h5>
               <p><em>Tekkon Technologies Nepal, Kathmandu, Nepal</em></p>
               <ul>
-                <li>Worked in technologies on Open CV, Cuda and Gstreamer.</li>
+                <li>Worked in vision based technologies such as Open CV, Cuda, Pytorch, Torchvision, YOLO, Tensor and Gstreamer.</li>
                 <li>Worked closely with international clients to build AI powered model.</li>
+                <li>Designing, developing, and researching Machine Learning systems, models, and schemes.</li>
                 <li>Hybrid working culture has certainly made impact in my life to work remotely and have a great team to work with.</li>
                 <!-- <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
               </ul>
