--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             <div class="resume-item">
               <h4>Backend AI Engineer</h4>
               <h5>February, 2023 - Present</h5>
-              <p><em>Tekkon Technologies Nepal, Kathmandu, Nepal</em></p>
+              <p><em>Tekkon Technologies, Kathmandu, Nepal</em></p>
               <ul>
                 <li>Worked in vision based technologies such as Open CV, Cuda, Pytorch, Torchvision, YOLO, Tensor and Gstreamer.</li>
                 <li>Worked closely with international clients to build AI powered model.</li>
