--- a/pastweb/index.html
+++ b/pastweb/index.html
@@ -2,6 +2,8 @@
 <html lang="zxx">
 
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3408710017721061"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="description" content="Videograph Template">
     <meta name="keywords" content="Videograph, unica, creative, html">
