--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
 </head>
 
 <body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3408710017721061"
+  crossorigin="anonymous"></script>
+<!-- appliances -->
+<ins class="adsbygoogle"
+  style="display:block"
+  data-ad-client="ca-pub-3408710017721061"
+  data-ad-slot="6010951914"
+  data-ad-format="auto"
+  data-full-width-responsive="true"></ins>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
