column fixed front page

--- a/resume/techreal.html
+++ b/resume/techreal.html
@@ -458,8 +458,9 @@ body{
 		 top: 4px;
 
 
-	span { float: left;
-		   position: relative;
+	span { 
+		float: left;
+		   position : relative;
 
 			/* Orange */
 			&:nth-child(1), &:nth-child(12),
